<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/movie">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#061A8C"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Enter movie title here" />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:textColor="#061A8C"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter genre here"/>

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#061A8C"
        android:textStyle="bold"
        android:text="@string/year" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#061A8C"
        android:textStyle="bold"
        android:hint="Enter year of release here" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#061A8C"
        android:textStyle="bold"
        android:text="@string/rating" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:textColor="#061A8C"
        android:textStyle="bold"
        android:entries="@array/ratings"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert" />

    <Button
        android:id="@+id/bShowList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list" />


</LinearLayout>
